--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,11 @@
 
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#F4F6FA" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="title" content="Observatório dos Sistemas Nacionais de Proteção Socioambiental da Região Amazônica">
-  <meta name="description"
-    content="Temos como objetivo monitorar e analisar o desenvolvimento dos mecanismos de proteção socioambiental na região amazônica.">
-  <meta name="keywords"
-    content="amazônia, socioambental, região amazônica, brasil, brazil, amazon, nature, natureza, meio ambiente">
+  <meta name="title" content="Ana's Todo">
+  <meta name="description" content="Todo list da Ana">
+  <meta name="keywords" content="todo, list, lista, fazer, compras">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="Portuguese">
@@ -27,15 +25,12 @@
   <meta property="og:image" content="%PUBLIC_URL%/assets/og-image.png">
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:title"
-    content="Observatório dos Sistemas Nacionais de Proteção Socioambiental da Região Amazônica">
-  <meta property="og:description"
-    content="Temos como objetivo monitorar e analisar o desenvolvimento dos mecanismos de proteção socioambiental na região amazônica.">
+  <meta property="og:title" content="Ana's Todo">
+  <meta property="og:description" content="Todo list da Ana">
   <meta property="og:url" content="%PUBLIC_URL%">
   <meta property="og:type" content="article">
   <meta property="og:locale" content="pt-br">
-  <meta property="og:site_name"
-    content="Observatório dos Sistemas Nacionais de Proteção Socioambiental da Região Amazônica">
+  <meta property="og:site_name" content="Todo list da Ana">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -50,7 +45,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Observatório dos Sistemas Nacionais de Proteção Socioambiental da Região Amazônica</title>
+  <title>Ana's to-do list</title>
 </head>
 
 <body>
